--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   update-readme:
     name: Update this repo's README
-    runs-on: ubuntu-latest
+    runs-on: windows
     steps:
       - uses: TridibD004/waka-readme-stats@master #PLEASE USE MASTER BRANCH
         with:
